--- a/client/src/styles/components/Foro/foro_menu/_foro_menu.scss
+++ b/client/src/styles/components/Foro/foro_menu/_foro_menu.scss
@@ -7,19 +7,20 @@
     flex-direction: column;
     padding: 5px;
     color: white;
+    z-index: 2;
     @media (max-width:900px) {
         height: 100vh;
         width:50px;
     }
-    @media (max-width:500px){
+    @media (max-width:610px){
         flex-direction: row;
-        height: auto;
-        width: 100vh;
-        
-       
+        height: 50px;
+        width: 100%;
+        position: absolute;
+        bottom: 0px;
+        margin-top: 0;
     }
     
-    //border-top: 1px solid $standard-background;
 
     .Menu_ButtonContainer {
         transition: all .2s ease-in;
@@ -30,10 +31,14 @@
         justify-content: center;
         padding: 10px 0px;
         margin-bottom: 12px;
+        
 
-        @media (max-width:500px){
+        @media (max-width:610px){
            justify-content: center;
-           padding: 0px;
+           padding: 0;
+           display: flex;
+           //border: 1px solid red;
+           margin: 0;
         }
         &:hover {
             background-color:rgb(17, 22, 54);
@@ -41,6 +46,9 @@
 
         img {
             width: 36px;
+            @media (max-width: 500px) {
+                width: 25px;
+            }
         }
     }
 }
