--- a/client/src/styles/components/Foro/foro_panelfilter/_foro_panelFilter.scss
+++ b/client/src/styles/components/Foro/foro_panelfilter/_foro_panelFilter.scss
@@ -6,18 +6,21 @@
     width: 300px;
     display: flex;
     margin-top: 20px;
+    margin-left: 20px;
     border-radius: 10px;
     padding: 10px 25px;
     justify-content: space-between;
     height: 400px;
     margin-right: 40px;
-    // background-color: blue; 
+    //background-color: blue; 
     @media (max-width: 900px) {
+        min-height: 120px;
+        max-height: 120px;
+        overflow: hidden;
         width: 98%;
-        margin-right: 0px;
+        margin: 0;
         margin-top: 10px;
-        height: auto;
-     
+        //display: none;
     }
     
    
@@ -101,7 +104,10 @@
                 margin-left: 0px;
             }
             p {
-                @media (max-width: 610px){
+                @media (max-width: 900px){
+                    font-size: 10px;
+                }
+                @media (max-width: 780px){
                     display: none;
                 }
             }
@@ -139,10 +145,26 @@
             background-color:rgb(17, 22, 54);
             transition: all .1s ease-in;
             overflow: hidden;
+
             @media (max-width: 610px){
                 justify-content: center;
                 padding-right: 5px;
            
+            }
+            p {
+                @media (max-width: 900px){
+                    font-size: 10px;
+                }
+                @media (max-width: 780px){
+                    display: none;
+                }
+            }p {
+                @media (max-width: 900px){
+                    font-size: 10px;
+                }
+                @media (max-width: 780px){
+                    display: none;
+                }
             }
             
             img {
