--- a/client/src/styles/components/Foro/foro_profile/_foro_profile.scss
+++ b/client/src/styles/components/Foro/foro_profile/_foro_profile.scss
@@ -22,6 +22,8 @@
         @media (max-width: 500px) {
             height: 90vh;
             justify-content: flex-start;
+            flex-direction: column;
+            align-items: center;
         }
 
         .Foro_Profile_PostSide {
