--- a/client/src/styles/components/Foro/foro_Home/_foro_Home.scss
+++ b/client/src/styles/components/Foro/foro_Home/_foro_Home.scss
@@ -84,6 +84,7 @@
 
             body.dark & {
               background-color: rgba(45, 44, 44, 0.8);
+              color: white;
             }
           }
 
@@ -105,6 +106,7 @@
 
             body.dark & {
               background-color: rgba(45, 44, 44, 0.8);
+              color: white;
             }
           }
         }
