--- a/client/src/styles/components/Shop/_shop.scss
+++ b/client/src/styles/components/Shop/_shop.scss
@@ -1,13 +1,19 @@
 .content-shop {
-  height: calc(100vh - $navbar-height - $footer-height - $navbar-height-maring-top -  $navbar-height-maring-button);
+  height: calc(
+    100vh - $navbar-height - $footer-height - $navbar-height-maring-top -
+      $navbar-height-maring-button
+  );
   width: 100%;
   background-color: $standard-color-white;
   display: flex;
   overflow: hidden;
 
+  body.dark & {
+    background: $standard-color-black;
+  }
+
   @media (max-width: 610px) {
     height: calc(100vh - $navbar-height - $footer-height);
-
   }
 
   .shop-contain {
@@ -24,10 +30,4 @@
     height: auto;
     padding: 10px;
   }
-  
 }
-
-
-
-
-
