--- a/client/src/styles/components/Card2/_card2.scss
+++ b/client/src/styles/components/Card2/_card2.scss
@@ -7,6 +7,9 @@
   border-radius: 15px;
   background-color: $standard-color-blue-light;
 
+  body.dark & {
+    background: $standard-color-black;
+  }
   .container-card-beta {
     padding: 20px;
     height: 100%;
@@ -39,7 +42,11 @@
       display: flex;
       flex-direction: column;
       gap: 15px;
-      
+
+      body.dark & {
+        background: $standard-color-black-ligth;
+      }
+
       @media (max-width: 450px) {
         display: flex;
         flex-direction: column;
@@ -74,8 +81,8 @@
             padding: 0;
             &:hover {
               scale: 1.1;
+            }
           }
-          }  
         }
       }
 
@@ -129,6 +136,10 @@
           font-family: $standard-font-Outfit-sans-serif;
           font-weight: 600;
           color: $standard-color-blue;
+
+          body.dark & {
+            color: white;
+          }
         }
 
         .product-description-card-beta {
@@ -161,12 +172,15 @@
           height: 100%;
           display: flex;
           align-items: center;
-          background-color: $standard-color-white;
 
           .price2 {
             color: $standard-color-black-ligth;
             font-family: $standard-font-Lexend-Deca-sans-serif;
             font-weight: 600;
+
+            body.dark & {
+              color: white;
+            }
           }
         }
       }
