--- a/client/src/styles/components/Dashboard_admin/_dashboardAdmin.scss
+++ b/client/src/styles/components/Dashboard_admin/_dashboardAdmin.scss
@@ -58,7 +58,7 @@
         // border: 1px solid green;
         font-size: 24px;
         // margin-top: 20px;
-        color: rgb(0, 0, 0);
+        // color: rgb(0, 0, 0);
       }
 
       p {
