style: :lipstick: aply dark mode quicklock

--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -26,7 +26,7 @@ $standard-font-Outfit-sans-serif: 'Outfit', sans-serif;
 $standard-font-Urbanis-sans-serif: 'Urbanist', sans-serif;
 
 //TODO color palette ( RGB )
-$standard-color-black: rgba(0, 0, 0, 1);
+$standard-color-black: rgb(16, 16, 16);
 $standard-color-black-ligth: rgba(20, 20, 20, 0.8);
 $standard-color-beige: #a0937d;
 $standard-color-blue: rgba(20, 33, 66, 1);
