--- a/client/src/styles/components/Checkout/_form.scss
+++ b/client/src/styles/components/Checkout/_form.scss
@@ -7,6 +7,10 @@
       $navbar-height-maring-button
   );
 
+  body.dark & {
+    background: $standard-color-black-ligth;
+  }
+
   .form_wrapper {
     border-radius: 20px;
     text-align: center;
@@ -21,7 +25,7 @@
       gap: 10px;
 
       body.dark & {
-        background: $standard-color-black-ligth;
+        background: $standard-color-black;
         box-shadow: 12px 12px 24px #151515, -12px -12px 24px #232323;
       }
 
