--- a/client/src/styles/components/Shop/_shop.scss
+++ b/client/src/styles/components/Shop/_shop.scss
@@ -9,7 +9,7 @@
   overflow: hidden;
 
   body.dark & {
-    background: $standard-color-black;
+    background: $standard-color-black-ligth;
   }
 
   @media (max-width: 610px) {
