--- a/client/src/styles/components/_carrousel.scss
+++ b/client/src/styles/components/_carrousel.scss
@@ -53,10 +53,8 @@ $card-size: 18rem;
   position: absolute;
   width: 100%;
   height: 100%;
-  transform: rotateY(calc(var(--offset) * 50deg))
-    scaleY(calc(1 + var(--abs-offset) * -0.4))
-    translateZ(calc(var(--abs-offset) * -30rem))
-    translateX(calc(var(--direction) * -5rem));
+  transform: rotateY(calc(var(--offset) * 50deg)) scaleY(calc(1 + var(--abs-offset) * -0.4))
+    translateZ(calc(var(--abs-offset) * -30rem)) translateX(calc(var(--direction) * -5rem));
   filter: blur(calc(var(--abs-offset) * 1rem));
   transition: all 0.3s ease-out;
 }
@@ -74,11 +72,15 @@ $card-size: 18rem;
   display: flex;
   flex-direction: column;
 
+  body.dark & {
+    background: $standard-color-black;
+  }
+
   .HomeCard_HeaderContainer {
     //background-color: #EC4899;
     display: flex;
     justify-content: center;
-    font-family: "Poiret One", cursive;
+    font-family: 'Poiret One', cursive;
     position: relative;
     bottom: 15px;
     font-size: 20px;
@@ -105,14 +107,21 @@ $card-size: 18rem;
       font-size: 14px;
       text-decoration: none;
       text-justify: auto;
+      body.dark & {
+        color: white;
+      }
     }
   }
 
   .HomeCard_DescriptionContainer {
     display: flex;
     width: 100%;
-    font-family: "Quicksand", sans-serif;
+    font-family: 'Quicksand', sans-serif;
     color: black;
+
+    body.dark & {
+      color: white;
+    }
   }
 
   .HomeCard_RatingContainer {
@@ -128,9 +137,13 @@ $card-size: 18rem;
   .HomeCard_PriceContainer {
     display: flex;
     justify-content: flex-end;
-    font-family: "Urbanist", sans-serif;
+    font-family: 'Urbanist', sans-serif;
     color: black;
     font-size: 14px;
+
+    body.dark & {
+      color: white;
+    }
   }
 
   .HomeCard_AddCartButtonContainer {
